--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,13 @@ baseurl: '/PanelCV' #change it according to your repository name
 
 
 # Profile information
-yourname: Brown Smith  ## put your name
+yourname: Piman Angkurasri  ## put your name
 title: 'GRAPHIC &amp; WEB DESIGNER'  ## your title
-location: San Francisco , CA
+location: Ubon Ratchathani , TH
 
 
 ## Social Profiles
-facebook: http://www.facebook.com  ## your facebook account url
-twitter: http://www.twitter.com  ## your twitter account url
-linkedin: http://www.linkedin.com  ## your linkedin account url
-dribbble: http://www.dribble.com  ## you dribbble account url
+facebook: http://https://www.facebook.com/profile.php?id=100009899222250  ## your facebook account url
 foursquare: http://www.foursquare.com  ## your foursquare account url
 
 
