--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ location: Ubon Ratchathani , TH
 
 
 ## Social Profiles
-facebook: http://https://www.facebook.com/profile.php?id=100009899222250  ## your facebook account url
+facebook: https://www.facebook.com/profile.php?id=100009899222250  ## your facebook account url
 foursquare: http://www.foursquare.com  ## your foursquare account url
 
 
